fix color toastr

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11357,7 +11357,7 @@ a.text-dark:focus {
 }
 
 .toast-title {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .toast-message {
@@ -11525,19 +11525,19 @@ button.toast-close-button {
 }
 
 .toast-success {
-  background-color: #51a351;
+  background-color: #51a351 !important;
 }
 
 .toast-error {
-  background-color: #bd362f;
+  background-color: #bd362f !important;
 }
 
 .toast-info {
-  background-color: #2f96b4;
+  background-color: #2f96b4 !important;
 }
 
 .toast-warning {
-  background-color: #f89406;
+  background-color: #f89406 !important;
 }
 
 .toast-progress {
