--- a/public/css/all.css
+++ b/public/css/all.css
@@ -8,6 +8,11 @@
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
 
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
+
 .card-signin .card-title {
     margin-bottom: 2rem;
     font-weight: 300;
