--- a/public/css/all.css
+++ b/public/css/all.css
@@ -8,9 +8,15 @@
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
 
+.slide {
+    height: 100vh;
+    min-height: 350px;
+    background-size: cover;
+}
+
 .carousel-inner img {
-    width: 100%;
-    height: 100%;
+    width: 100% ;
+    height: 500px;
 }
 
 .card-signin .card-title {
