fix height slice

--- a/public/source/css/style.css
+++ b/public/source/css/style.css
@@ -778,7 +778,8 @@ h1, h2, h3, h4, h5,
   .site-section-cover,
   .site-section-cover .container > .row {
     height: calc(100vh - 196px);
-    min-height: 677px; }
+    min-height: 477px;
+  }
     @media (max-width: 991.98px) {
       .site-section-cover,
       .site-section-cover .container > .row {
