--- a/public/source/css/jquery-ui.css
+++ b/public/source/css/jquery-ui.css
@@ -104,7 +104,7 @@
 .ui-button:active {
 	text-decoration: none;
 }
-/* to make room for the icon, a width needs to be set here */
+/* to make rooms for the icon, a width needs to be set here */
 .ui-button-icon-only {
 	width: 2.2em;
 }
