--- a/public/css/all.css
+++ b/public/css/all.css
@@ -201,4 +201,22 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+/*.notification {*/
+/*    background-color: #555;*/
+/*    color: white;*/
+/*    padding: 15px 26px;*/
+/*    position: relative;*/
+/*    display: inline-block;*/
+/*    border-radius: 2px;*/
+/*}*/
+
+
+/*.notification .badge {*/
+/*    position: absolute !important;*/
+/*    top: -10px;*/
+/*    right: -10px;*/
+/*    padding: 5px 10px;*/
+/*    background-color: red !important;*/
+/*    color: white;*/
+/*}*/
 
