--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,18 @@
     display: none;
 }
 
+.btn_avatar {
+    position: relative;
+    overflow: hidden;
+}
+.file_up {
+    position: absolute;
+    font-size: 50px;
+    opacity: 0;
+    right: 0;
+    top: 0;
+}
+
 .list_start .rating_active{
     color: #ff9705;
 }
