fixed z index information house' user

--- a/public/source/css/style.css
+++ b/public/source/css/style.css
@@ -1745,3 +1745,10 @@ h1, h2, h3, h4, h5,
 .pagination-39291 > a {
   background: #91b029;
   color: #fff; }
+/*.informationHouseHost{*/
+/*    position: fixed;*/
+/*    left: 55%;*/
+/*    top: 20%;*/
+/*}*/
+/*.information{*/
+/*}*/
