--- a/public/source/css/style.css
+++ b/public/source/css/style.css
@@ -456,6 +456,7 @@ h1, h2, h3, h4, h5,
   position: absolute;
   top: 0;
   width: 100%;
+    height: 90px;
   padding: 1rem; }
   @media (max-width: 991.98px) {
     .site-navbar {
